2006-02-22  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/ekiga.cpp src/gui/addressbook.cpp:
	Added missing menu items thanks to Jan Schampera.

	* lib/gui/gmstockicons.c:
	Added missing stock icon.

	* src/gui/main.cpp:
	Applied patch from Brian Lu <brian lu sun com> to fix full screen on big
	endian machines.

2006-02-22  Julien Puydt  <jpuydt@free.fr>

	* lib/gui/gmtray/gmtray-x11.c: Fixed #330802.

2006-02-21  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/ekiga.cpp src/endpoints/h323.cpp 
	src/endpoints/sip.cpp: Added possibility to have several IP addresses 
	on the same interface.

	* src/gui/callshistory.cpp: Fixed leak thanks to Jan Schampera.

2006-02-19  Damien Sandras  <dsandras@gnome.org>

	* src/gui/tools.cpp: Fixed URLs again.

	* src/endpoints/urlhandler.cpp:
	Automatically use the PC-To-Phone provider if we are registered to it,
	registered to ekiga.net, and are calling 00something.

	* help/C/ekiga.xml help/es/es.po help/fr/fr.po help/uk/uk.po:
	More work on the manual.

2006-02-19  Damien Sandras  <dsandras@gnome.org>

	* endpoints/sip.cpp:
	Changed default timeouts.
	
2006-02-19  Damien Sandras  <dsandras@gnome.org>

	* lib/gmcontacts/gmcontacts-gmconf.cpp:
	Adapted to new API.

2006-02-18  Damien Sandras  <dsandras@gnome.org>

	* src/gui/callshistory.cpp:
	Applied patch from Jan Schampera to fix the list of the last 10 
	dialed items.

2006-02-18  Damien Sandras  <dsandras@gnome.org>

	* lib/gmcontacts/gmcontacts-avahi.cpp 
	lib/gmcontacts/gmcontacts-avahi.h 
	lib/gmcontacts/gmcontacts-eds.cpp 
	lib/gmcontacts/gmcontacts-gmconf.cpp 
	lib/gmcontacts/gmcontacts-ldap.cpp 
	lib/gmcontacts/gmcontacts-ldap.h 
	lib/gmcontacts/gmcontacts-local.h 
	lib/gmcontacts/gmcontacts-remote.cpp 
	lib/gmcontacts/gmcontacts-remote.h 
	lib/gmcontacts/gmcontacts.cpp lib/gmcontacts/gmcontacts.h 
	src/endpoints/manager.cpp src/endpoints/urlhandler.cpp 
	src/gui/addressbook.cpp src/gui/chat.cpp src/gui/main.cpp: