@@ -1,3 +1,9 @@
+2006-02-27  Julien Puydt  <jpuydt@free.fr>
+
+	* lib/gmcontacts/gmcontacts.h: Named the arguments of
+	gnomemeeting_addressbook_get_contacts, so the previous explanations
+	get more useful ;-)
+
 2006-02-22  Damien Sandras  <dsandras@gnome.org>
 
 	* src/endpoints/ekiga.cpp src/gui/addressbook.cpp:
